src/objects/ExclusionJoinTable__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <label>ContactID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <label>ProductID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SponsorID__c</fullName>
        <label>SponsorID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exclusion Join Table</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exclusion Joins Table</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>